force-app/main/default/objects/Leave_Entitlement__c/fields/Total_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Days__c</fullName>
    <description>Total leave days granted for the year</description>
    <label>Total Days</label>
    <precision>6</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>