force-app/main/default/objects/Leave_Entitlement__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who owns this leave entitlement</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Leave Entitlements</relationshipLabel>
    <relationshipName>Leave_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>