force-app/main/default/objects/Leave_Entitlement__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Year of this leave entitlement (e.g. 2026)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>