force-app/main/default/objects/Leave_Entitlement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Days__c</columns>
    <columns>User__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>